--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+# Core dependencies
 requests==2.31.0
 pandas==2.1.1
 python-dotenv==1.0.0
-argparse==1.4.0
 tabulate==0.9.0
+
+# Database
+SQLAlchemy==2.0.21
+psycopg2-binary==2.9.7  # PostgreSQL support for production use
+
+# Optional
+argparse==1.4.0
 
