--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ tabulate==0.9.0
 SQLAlchemy==2.0.21
 psycopg2-binary==2.9.7  # PostgreSQL support for production use
 
+tldextract==3.4.0
+
 # Optional
 argparse==1.4.0
 
